--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
         </header>
         <main role="main" class="inner">
             <div class="wow fadeInUp"><br>
-                <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png" style="width:154px;margin-top:10px;">
+                <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png"
+                    style="width:154px;margin-top:10px;">
                 <p class="top-title">김승목 ❤️ 이호선</p>
 
 
@@ -277,7 +278,8 @@
                 축하해 주시는<br />
                 모든 분들에게
             </p>
-                <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png" style="width:154px;margin-top:10px;">
+            <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png"
+                style="width:154px;margin-top:10px;">
             <div class="wow fadeInUp">
                 <p class="section1-title section1-sub">
                     사랑으로 물들어가는 계절,<br />
@@ -309,26 +311,29 @@
             <!-- Swiper Modal -->
             <!-- 이미지 모달 -->
             <div id="imageModal" class="modal fade" tabindex="-1">
-            <div class="modal-dialog modal-dialog-centered modal-xl">
-                <div class="modal-content bg-transparent border-0">
-                <div class="modal-body p-0 position-relative d-flex align-items-center justify-content-center" style="height: 80vh;">
-                    <img id="modalImage" src="" class="img-fluid" style="max-width: 90%; max-height: 100%; object-fit: contain;">
+                <div class="modal-dialog modal-dialog-centered modal-xl">
+                    <div class="modal-content bg-transparent border-0">
+                        <div class="modal-body p-0 position-relative d-flex align-items-center justify-content-center"
+                            style="height: 80vh;">
+                            <img id="modalImage" src="" class="img-fluid"
+                                style="max-width: 90%; max-height: 100%; object-fit: contain;">
 
-                    <button type="button" class="gallery-modal-close" data-dismiss="modal" aria-label="Close">
-                    &times;
-                    </button>
+                            <button type="button" class="gallery-modal-close" data-dismiss="modal" aria-label="Close">
+                                &times;
+                            </button>
 
-                    <!-- 이전/다음 버튼 -->
-                    <button id="prevBtn" class="gallery-modal-nav nav-left" aria-label="Previous">&lt;</button>
-                    <button id="nextBtn" class="gallery-modal-nav nav-right" aria-label="Next">&gt;</button>
+                            <!-- 이전/다음 버튼 -->
+                            <button id="prevBtn" class="gallery-modal-nav nav-left" aria-label="Previous">&lt;</button>
+                            <button id="nextBtn" class="gallery-modal-nav nav-right" aria-label="Next">&gt;</button>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
             </div>
 
             <div class="wow fadeInUp">
                 <br /><br />
-                <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png" style="width:154px;margin-top:10px;">
+                <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png"
+                    style="width:154px;margin-top:10px;">
                 <div class="container section4-title">
                     <div class="row">
                         <div class="col-6 section4-sec1-2">
@@ -431,12 +436,13 @@
                                 <img class="bank-icon" src="./img/ibk.png" alt="IBK 기업은행">
                                 <span class="account-text">기업은행 356-011-775-02-011 김승목</span><br>
                                 <button class="copy-btn" data-account="기업 356-011-775-02-011 김승목">
-                                <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"
-                                    stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                                    <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
-                                    <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
-                                </svg>
-                                복사하기
+                                    <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                        fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" viewBox="0 0 24 24">
+                                        <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
+                                        <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+                                    </svg>
+                                    복사하기
                                 </button>
                             </div>
                             <div class="modal-footer">
@@ -464,12 +470,13 @@
                                 <img class="bank-icon" src="./img/kakaobank.png" alt="카카오뱅크">
                                 <span class="account-text">카카오뱅크 7979-79-13360 이호선</span><br>
                                 <button class="copy-btn" data-account="카카오뱅크 7979-79-13360 이호선">
-                                <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"
-                                    stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                                    <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
-                                    <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
-                                </svg>
-                                복사하기
+                                    <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                        fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" viewBox="0 0 24 24">
+                                        <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
+                                        <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+                                    </svg>
+                                    복사하기
                                 </button>
                             </div>
                             <div class="modal-footer">
@@ -559,8 +566,9 @@
                 <!--<p class="wow fadeInUp section5-title section5-sub" style="margin-top:1.3em">명운 ❤️ 재은 결혼식이 <span id="d-day"></span>일 남았습니다.</p>-->
                 <br /><br />
             </div>
-                <br /><br />
-                <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png" style="width:154px;margin-top:10px;">
+            <br /><br />
+            <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png"
+                style="width:154px;margin-top:10px;">
             <div class="wow fadeInUp inner cover-container d-flex w-100 h-100 mx-auto flex-column">
                 <p class="wow fadeInUp section6-title section6-main">Location</p>
                 <div class="wow fadeInUp  section6-title">
@@ -569,11 +577,51 @@
                         경기도 부천시 원미구 송내대로 239
                     </p>
                 </div>
+
                 <br />
                 <div id="map" class="wow fadeInUp" style="width:100%;height:350px;"></div>
-
+                <div class="map-buttons">
+                    <a href="javascript:void(0)" class="map-btn naver" onclick="goNaverNavi()">
+                        <img src="img/navermap.png"
+                            alt="네이버 지도" />
+                        네이버 지도
+                    </a>
+                    <a href="javascript:void(0)" class="map-btn kakao" onclick="goKakaoNavi()">
+                        <img src="img/kakaonavi.png" alt="카카오 내비" />
+                        카카오 네비
+                    </a>
+                    <a href="javascript:void(0)" class="map-btn tmap" onclick="goTmapNavi()">
+                        <img src="img/tmap.png" alt="T map" />
+                        T map
+                    </a>
+                </div>
                 <script type="text/javascript" src="js/kakao.js"></script>
+                <script>
+                    const lat = 37.4979;   // 위도 (예: 더채플앳논현)
+                    const lng = 127.0280;  // 경도
+                    const placeName = "더채플앳논현";
 
+                    function goKakaoNavi() {
+                        const kakaoUrl = `kakaonavi://navigate?name=${encodeURIComponent(placeName)}&x=${lng}&y=${lat}&coord_type=wgs84`;
+                        const fallbackUrl = `https://map.kakao.com/link/to/${encodeURIComponent(placeName)},${lat},${lng}`;
+                        window.location.href = kakaoUrl;
+                        setTimeout(() => { window.location.href = fallbackUrl; }, 1500);
+                    }
+
+                    function goNaverNavi() {
+                        const naverUrl = `nmap://route/car?dlat=${lat}&dlng=${lng}&dname=${encodeURIComponent(placeName)}`;
+                        const fallbackUrl = `https://map.naver.com/v5/directions/${lng},${lat}/${lng},${lat}/car`;
+                        window.location.href = naverUrl;
+                        setTimeout(() => { window.location.href = fallbackUrl; }, 1500);
+                    }
+                    
+                    function goTmapNavi() {
+                        const tmapUrl = `tmap://route?goalx=${lng}&goaly=${lat}&goalname=${encodeURIComponent(placeName)}`;
+                        const fallbackUrl = `https://apis.openapi.sk.com/tmap/app/routes?goalx=${lng}&goaly=${lat}&goalname=${encodeURIComponent(placeName)}`;
+                        window.location.href = tmapUrl;
+                        setTimeout(() => { window.location.href = fallbackUrl; }, 1500);
+                    }
+                </script>
                 <script>
                     var mapContainer = document.getElementById('map'), // 지도를 표시할 div
                         mapOption = {
