--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
   const placeName = "더채플앳논현";
 
   // ★ 카카오내비 "네이티브 앱키"로 교체하세요.
-  const KAKAO_APP_KEY = "YOUR_KAKAONAVI_APP_KEY";
+  const KAKAO_APP_KEY = "81a9baa23016b5555dacfb54fdeb2e5b";
 
   // 단말 구분
   const ua = navigator.userAgent.toLowerCase();
