--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
     }).toString();
     return {
       iosScheme: `tmap://route?${qs}`,
-      androidIntent: `intent://route?${qs}#Intent;scheme=tmap;package=com.skt.tmap;end`,
+      androidIntent: `intent://route?${qs}#Intent;scheme=tmap;package=com.skt.tmap.ku;end`,
       // ← 여기 webUrl은 위의 WEB_FALLBACK.tmap(= Google Maps)로 연결
       webUrl: WEB_FALLBACK.tmap
     };
