--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 </div>
                 <script type="text/javascript" src="js/kakao.js"></script>
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=97a4ac173202661cefba378bc03ac65f"></script>
+<script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=97a4ac173202661cefba378bc03ac65f"></script>
 <script charset="UTF-8" src="https://t1.daumcdn.net/mapjsapi/js/main/4.4.19/kakao.js"></script>
 <script>
   // 목적지 정보
@@ -752,12 +752,12 @@
   // document.getElementById('btnTmap').onclick = goTmapNavi;
 
   
-if (!Kakao.init) {
-    Kakao.init('13da3914377346b0b8f74f5309b49dad')
-}
 
 function kakao_navi() {
 
+    if (!Kakao.init) {
+        Kakao.init('13da3914377346b0b8f74f5309b49dad')
+    }
     if (is_pc == '1') {
         alert('모바일 기기 전용 기능입니다')
     }
