--- a/index.html
+++ b/index.html
@@ -669,6 +669,7 @@
   }
   // 명시적 버전
   function goKakaoNavi_AOS() {
+    alert("kakao");
     kakao_navi();
     // const { androidIntent, webUrl } = buildKakao();
     // openAppDeepLink({ iosScheme: "", androidIntent, webUrl });
