--- a/index.html
+++ b/index.html
@@ -596,9 +596,9 @@
                     </a>
                 </div>
                 <script type="text/javascript" src="js/kakao.js"></script>
-
-<script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=97a4ac173202661cefba378bc03ac65f"></script>
-<script charset="UTF-8" src="https://t1.daumcdn.net/mapjsapi/js/main/4.4.19/kakao.js"></script>
+<script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+<!-- <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=97a4ac173202661cefba378bc03ac65f"></script>
+<script charset="UTF-8" src="https://t1.daumcdn.net/mapjsapi/js/main/4.4.19/kakao.js"></script> -->
 <script>
   // 목적지 정보
   const lat = 37.4979;         // 위도
