--- a/index.html
+++ b/index.html
@@ -599,9 +599,9 @@
                 
 <script>
   // 목적지 정보
-  const lat = 37.4979;         // 위도
-  const lng = 127.0280;        // 경도
-  const placeName = "더채플앳논현";
+  const lat = 37.504265;         // 위도
+  const lng = 126.756944;        // 경도
+  const placeName = "소풍컨벤션웨딩홀";
 
   // 단말 구분
   const ua = navigator.userAgent.toLowerCase();
