--- a/index.html
+++ b/index.html
@@ -220,6 +220,43 @@
             });
         });
     </script>
+    <script>
+        // 우클릭 메뉴 차단 (PC)
+        document.addEventListener('contextmenu', (e) => {
+            if (e.target.closest('img.no-actions')) {
+                e.preventDefault();
+            }
+        });
+
+        // 이미지 드래그 시작 차단 (PC)
+        document.addEventListener('dragstart', (e) => {
+            if (e.target.closest('img.no-actions')) {
+                e.preventDefault();
+            }
+        });
+
+        // 이미지 자체 드래그 비활성화 속성 부여
+        document.querySelectorAll('img.no-actions').forEach(img => {
+            img.setAttribute('draggable', 'false');
+        });
+
+        // 모바일 롱프레스 팝업 억제
+        // 주의: touchstart에서 preventDefault를 걸면 해당 터치 제스처(스크롤/스와이프)가 막힐 수 있음.
+        // → 이미지에만 제한적으로 적용하고, 스크롤이 필요한 갤러리라면 '배경이미지 방식'을 고려하세요(아래 참고).
+        let lpTimer = null;
+        document.addEventListener('touchstart', (e) => {
+            const img = e.target.closest('img.no-actions');
+            if (!img) return;
+
+            // 일부 브라우저는 contextmenu가 뜨기 전에 preventDefault가 필요
+            // passive:false 여야 preventDefault가 동작
+            e.preventDefault(); // 이미지에서 시작되는 스크롤이 막힐 수 있음(의도)
+            // 롱프레스 탐지를 굳이 쓸 필요는 없지만, 유지하고 싶다면 시간 설정 가능
+        }, { passive: false });
+
+        document.addEventListener('touchend', () => { clearTimeout(lpTimer); }, { passive: true });
+        document.addEventListener('touchmove', () => { clearTimeout(lpTimer); }, { passive: true });
+    </script>
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
@@ -263,7 +300,7 @@
         <main role="main" class="inner">
             <div class="wow fadeInUp"><br>
                 <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png"
-                    style="width:154px;margin-top:10px;">
+                    style="width:154px;margin-top:10px;" class="no-actions">
                 <p class="top-title">김승목 ❤️ 이호선</p>
 
 
@@ -278,7 +315,7 @@
                 축하해 주시는<br />
                 모든 분들에게
             </p>
-            <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png"
+            <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png" class="no-actions"
                 style="width:154px;margin-top:10px;">
             <div class="wow fadeInUp">
                 <p class="section1-title section1-sub">
@@ -315,7 +352,7 @@
                     <div class="modal-content bg-transparent border-0">
                         <div class="modal-body p-0 position-relative d-flex align-items-center justify-content-center"
                             style="height: 80vh;">
-                            <img id="modalImage" src="" class="img-fluid"
+                            <img id="modalImage" src="" class="img-fluid no-actions"
                                 style="max-width: 90%; max-height: 100%; object-fit: contain;">
 
                             <button type="button" class="gallery-modal-close" data-dismiss="modal" aria-label="Close">
@@ -333,7 +370,7 @@
             <div class="wow fadeInUp">
                 <br /><br />
                 <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png"
-                    style="width:154px;margin-top:10px;">
+                    style="width:154px;margin-top:10px;" class="no-actions">
                 <div class="container section4-title">
                     <div class="row">
                         <div class="col-6 section4-sec1-2">
@@ -433,7 +470,7 @@
                                 </button>
                             </div>
                             <div class="modal-body section7-modal section7-modal-content">
-                                <img class="bank-icon" src="./img/ibk.png" alt="IBK 기업은행">
+                                <img class="bank-icon" src="./img/ibk.png" alt="IBK 기업은행" class="no-actions">
                                 <span class="account-text">기업은행 356-011-775-02-011 김승목</span><br>
                                 <button class="copy-btn" data-account="기업 356-011-775-02-011 김승목">
                                     <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
@@ -467,7 +504,7 @@
                                 </button>
                             </div>
                             <div class="modal-body section7-modal section7-modal-content">
-                                <img class="bank-icon" src="./img/kakaobank.png" alt="카카오뱅크">
+                                <img class="bank-icon" src="./img/kakaobank.png" alt="카카오뱅크" class="no-actions">
                                 <span class="account-text">카카오뱅크 7979-79-13360 이호선</span><br>
                                 <button class="copy-btn" data-account="카카오뱅크 7979-79-13360 이호선">
                                     <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
@@ -568,7 +605,7 @@
             </div>
             <br /><br />
             <img class="header-deco svelte-15smenq" alt="letter header deco" src="img/deco.png"
-                style="width:154px;margin-top:10px;">
+                style="width:154px;margin-top:10px;" class="no-actions">
             <div class="wow fadeInUp inner cover-container d-flex w-100 h-100 mx-auto flex-column">
                 <p class="wow fadeInUp section6-title section6-main">Location</p>
                 <div class="wow fadeInUp  section6-title">
@@ -582,136 +619,135 @@
                 <div id="map" class="wow fadeInUp" style="width:100%;height:350px;"></div>
                 <div class="map-buttons">
                     <a href="javascript:void(0)" class="map-btn naver" onclick="goNaverNavi()">
-                        <img src="img/navermap.png"
-                            alt="네이버 지도" />
+                        <img src="img/navermap.png" alt="네이버 지도" class="no-actions" />
                         네이버 지도
                     </a>
                     <a href="javascript:void(0)" class="map-btn kakao" onclick="goKakaoNavi()">
-                        <img src="img/kakaonavi.png" alt="카카오 내비" />
+                        <img src="img/kakaonavi.png" alt="카카오 내비" class="no-actions" />
                         카카오 네비
                     </a>
                     <a href="javascript:void(0)" class="map-btn tmap" onclick="goTmapNavi()">
-                        <img src="img/tmap.png" alt="T map" />
+                        <img src="img/tmap.png" alt="T map" class="no-actions" />
                         T map
                     </a>
                 </div>
                 <script type="text/javascript" src="js/kakao.js"></script>
-                
-<script>
-  // 목적지 정보
-  const lat = 37.504265;         // 위도
-  const lng = 126.756944;        // 경도
-  const placeName = "소풍컨벤션웨딩홀";
 
-  // 단말 구분
-  const ua = navigator.userAgent.toLowerCase();
-  const isAndroid = ua.includes("android");
-  const isIOS = /iphone|ipad|ipod/.test(ua);
+                <script>
+                    // 목적지 정보
+                    const lat = 37.504265;         // 위도
+                    const lng = 126.756944;        // 경도
+                    const placeName = "소풍컨벤션웨딩홀";
 
-  // 공통 웹 Fallback 링크들 (새 탭으로 열림)
-  const WEB_FALLBACK = {
-    kakao: `https://map.kakao.com/link/to/${encodeURIComponent(placeName)},${lat},${lng}`,
-    naver: `https://map.naver.com/v5/search/${encodeURIComponent(placeName)}`,
-    tmap:  `https://www.google.com/maps/dir/?api=1&destination=${lat},${lng}&destination_place_id=&travelmode=driving`
-  };
+                    // 단말 구분
+                    const ua = navigator.userAgent.toLowerCase();
+                    const isAndroid = ua.includes("android");
+                    const isIOS = /iphone|ipad|ipod/.test(ua);
 
-  // 현재 페이지를 유지한 채 앱만 실행 + 실패 시 웹 링크를 새 탭으로
-  function openAppDeepLink({ iosScheme, androidIntent, webUrl }) {
-    let didBackground = false;
-    const onVisibility = () => { didBackground = true; };
-    document.addEventListener("visibilitychange", onVisibility, { once: true });
+                    // 공통 웹 Fallback 링크들 (새 탭으로 열림)
+                    const WEB_FALLBACK = {
+                        kakao: `https://map.kakao.com/link/to/${encodeURIComponent(placeName)},${lat},${lng}`,
+                        naver: `https://map.naver.com/v5/search/${encodeURIComponent(placeName)}`,
+                        tmap: `https://www.google.com/maps/dir/?api=1&destination=${lat},${lng}&destination_place_id=&travelmode=driving`
+                    };
 
-    if (isAndroid) {
-      // Android: intent://
-      try { window.location.href = androidIntent; } catch (e) {}
-      setTimeout(() => { if (!didBackground) window.open(webUrl, "_blank"); }, 1500);
-    } else if (isIOS) {
-      // iOS: 숨은 iframe으로 스킴 호출
-      const iframe = document.createElement("iframe");
-      iframe.style.display = "none";
-      iframe.src = iosScheme;
-      document.body.appendChild(iframe);
-      setTimeout(() => {
-        try { document.body.removeChild(iframe); } catch {}
-        if (!didBackground) window.open(webUrl, "_blank");
-      }, 1500);
-    } else {
-      // PC 등
-      window.open(webUrl, "_blank");
-    }
-  }
+                    // 현재 페이지를 유지한 채 앱만 실행 + 실패 시 웹 링크를 새 탭으로
+                    function openAppDeepLink({ iosScheme, androidIntent, webUrl }) {
+                        let didBackground = false;
+                        const onVisibility = () => { didBackground = true; };
+                        document.addEventListener("visibilitychange", onVisibility, { once: true });
 
-  // =========================
-  // Kakao Navi
-  // =========================
-    function buildKakao(iOS = false) {
-    // 카카오맵 스킴 파라미터 정의
-    const qs = new URLSearchParams({
-        by: "CAR",                         // CAR | PUBLICTRANSIT | WALK
-        ep: `${lat},${lng}`,               // 목적지
-        // eName은 플랫폼/버전에 따라 무시되기도 해서 선택사항입니다.
-        eName: placeName
-    }).toString();
+                        if (isAndroid) {
+                            // Android: intent://
+                            try { window.location.href = androidIntent; } catch (e) { }
+                            setTimeout(() => { if (!didBackground) window.open(webUrl, "_blank"); }, 1500);
+                        } else if (isIOS) {
+                            // iOS: 숨은 iframe으로 스킴 호출
+                            const iframe = document.createElement("iframe");
+                            iframe.style.display = "none";
+                            iframe.src = iosScheme;
+                            document.body.appendChild(iframe);
+                            setTimeout(() => {
+                                try { document.body.removeChild(iframe); } catch { }
+                                if (!didBackground) window.open(webUrl, "_blank");
+                            }, 1500);
+                        } else {
+                            // PC 등
+                            window.open(webUrl, "_blank");
+                        }
+                    }
 
-    return {
-        iosScheme: `kakaomap://route?${qs}`,
-        androidIntent: `intent://route?${qs}#Intent;scheme=kakaomap;package=net.daum.android.map;end`,
-        webUrl: `https://map.kakao.com/link/to/${encodeURIComponent(placeName)},${lat},${lng}`
-    };
-    }
-  // 자동판별
-  function goKakaoNavi() {
-    const cfg = buildKakao();
-    openAppDeepLink(cfg);
-  }
+                    // =========================
+                    // Kakao Navi
+                    // =========================
+                    function buildKakao(iOS = false) {
+                        // 카카오맵 스킴 파라미터 정의
+                        const qs = new URLSearchParams({
+                            by: "CAR",                         // CAR | PUBLICTRANSIT | WALK
+                            ep: `${lat},${lng}`,               // 목적지
+                            // eName은 플랫폼/버전에 따라 무시되기도 해서 선택사항입니다.
+                            eName: placeName
+                        }).toString();
 
-  // =========================
-  // Naver Map
-  // =========================
-  function buildNaver(iOS = false) {
-    const qs = new URLSearchParams({
-      dlat: String(lat),
-      dlng: String(lng),
-      dname: placeName
-    }).toString();
-    return {
-      iosScheme: `nmap://route/car?${qs}`,
-      androidIntent: `intent://route/car?${qs}#Intent;scheme=nmap;package=com.nhn.android.nmap;end`,
-      webUrl: WEB_FALLBACK.naver
-    };
-  }
-  function goNaverNavi() {
-    const cfg = buildNaver();
-    openAppDeepLink(cfg);
-  }
+                        return {
+                            iosScheme: `kakaomap://route?${qs}`,
+                            androidIntent: `intent://route?${qs}#Intent;scheme=kakaomap;package=net.daum.android.map;end`,
+                            webUrl: `https://map.kakao.com/link/to/${encodeURIComponent(placeName)},${lat},${lng}`
+                        };
+                    }
+                    // 자동판별
+                    function goKakaoNavi() {
+                        const cfg = buildKakao();
+                        openAppDeepLink(cfg);
+                    }
 
-  // =========================
-  // T map
-  // =========================
-  function buildTmap(iOS = false) {
-    const qs = new URLSearchParams({
-      goalx: String(lng),
-      goaly: String(lat),
-      goalname: placeName
-    }).toString();
-    return {
-      iosScheme: `tmap://route?${qs}`,
-      androidIntent: `intent://route?${qs}#Intent;scheme=tmap;package=com.skt.tmap.ku;end`,
-      // ← 여기 webUrl은 위의 WEB_FALLBACK.tmap(= Google Maps)로 연결
-      webUrl: WEB_FALLBACK.tmap
-    };
-  }
+                    // =========================
+                    // Naver Map
+                    // =========================
+                    function buildNaver(iOS = false) {
+                        const qs = new URLSearchParams({
+                            dlat: String(lat),
+                            dlng: String(lng),
+                            dname: placeName
+                        }).toString();
+                        return {
+                            iosScheme: `nmap://route/car?${qs}`,
+                            androidIntent: `intent://route/car?${qs}#Intent;scheme=nmap;package=com.nhn.android.nmap;end`,
+                            webUrl: WEB_FALLBACK.naver
+                        };
+                    }
+                    function goNaverNavi() {
+                        const cfg = buildNaver();
+                        openAppDeepLink(cfg);
+                    }
 
-  function goTmapNavi() {
-    const cfg = buildTmap();
-    openAppDeepLink(cfg);
-  }
+                    // =========================
+                    // T map
+                    // =========================
+                    function buildTmap(iOS = false) {
+                        const qs = new URLSearchParams({
+                            goalx: String(lng),
+                            goaly: String(lat),
+                            goalname: placeName
+                        }).toString();
+                        return {
+                            iosScheme: `tmap://route?${qs}`,
+                            androidIntent: `intent://route?${qs}#Intent;scheme=tmap;package=com.skt.tmap.ku;end`,
+                            // ← 여기 webUrl은 위의 WEB_FALLBACK.tmap(= Google Maps)로 연결
+                            webUrl: WEB_FALLBACK.tmap
+                        };
+                    }
 
-  // 필요 시 버튼에 바인딩:
-  // document.getElementById('btnKakao').onclick = goKakaoNavi;
-  // document.getElementById('btnNaver').onclick = goNaverNavi;
-  // document.getElementById('btnTmap').onclick = goTmapNavi;
-</script>
+                    function goTmapNavi() {
+                        const cfg = buildTmap();
+                        openAppDeepLink(cfg);
+                    }
+
+                    // 필요 시 버튼에 바인딩:
+                    // document.getElementById('btnKakao').onclick = goKakaoNavi;
+                    // document.getElementById('btnNaver').onclick = goNaverNavi;
+                    // document.getElementById('btnTmap').onclick = goTmapNavi;
+                </script>
 
 
                 <script>
@@ -922,7 +958,7 @@
                 const img = document.createElement('img');
                 img.src = pair.thumb;
                 img.alt = "";
-                img.className = "img-fluid w-100";
+                img.className = "img-fluid no-actions w-100 ";
                 img.dataset.index = i;
 
                 col.appendChild(img);
