--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                         <div class="modal-body p-0 position-relative d-flex align-items-center justify-content-center"
                             style="height: 80vh;">
                             <img id="modalImage" src="" class="img-fluid no-actions"
-                                style="max-width: 90%; max-height: 100%; object-fit: contain;">
+                                style="max-width: 100%; object-fit: contain;">
 
                             <button type="button" class="gallery-modal-close" data-dismiss="modal" aria-label="Close">
                                 &times;
