--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
                 const img = document.createElement('img');
                 img.src = pair.thumb;
                 img.alt = "";
-                img.className = "img-fluid no-actions w-100 ";
+                img.className = "img-fluid w-100 ";
                 img.dataset.index = i;
 
                 col.appendChild(img);
